--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     color: #ffffff;
 }
 
-.header div {
+.header-list {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -40,7 +40,7 @@ li {
     margin-left: 25px;
 }
 
-.hero {
+.webpage-banner {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -135,7 +135,7 @@ h3 {
     text-align: center;
 }
 
-.benefit-image {
+.benefit-images {
     display: block;
     margin: 10px auto;
     max-width: 150px;
