--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -51,38 +51,23 @@ p {
     font-size: 20px;
     line-height: 1.5;
 }
-
-.content {
-    width: 75%;
+.content{
     display: inline-block;
-    margin-left: 25px;
+    background-color: #2589bd;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 30px;
+    width: 900px;
+    margin: 30px;
+    position: relative;
+    bottom: 400px;
+
 }
 
-.search-engine-optimization {
-    margin-bottom: 25px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.online-reputation-management {
-    margin-bottom: 25px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 25px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+.content-header {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .float-left {
@@ -97,40 +82,21 @@ p {
     max-height: 200px;
 }
 
-.content-header {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    color: white;
+    max-width: 250px;
+    height: auto;
+    padding: 20px;
+    padding-bottom: 30px;
+    margin: 32px;
+    display: inline-block;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-h3 {
-    margin-bottom: 10px;
+h3{
     text-align: center;
+    margin: 10px;
 }
 
 .benefit-images {
@@ -141,6 +107,7 @@ h3 {
 
 footer {
     padding: 30px;
+    margin: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
