--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@ header {
     color: #ffffff;
 }
 
+h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+span{
+    color: #d9dcd6;
+}
+
 .header-list {
     padding-top: 15px;
     margin-right: 20px;
@@ -23,11 +32,6 @@ header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     list-style-type: none;
-}
-
-h1 {
-    display: inline-block;
-    font-size: 48px;
 }
 
 a{
@@ -42,26 +46,51 @@ li {
 
 .webpage-banner {
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
 }
 
-p {
-    font-size: 20px;
-    line-height: 1.5;
-}
-.content{
-    display: inline-block;
+.benefits {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 30px;
-    width: 900px;
-    margin: 30px;
-    position: relative;
-    bottom: 400px;
+    max-width: 300px;
+    height: auto;
+    padding: 20px;
+    padding-bottom: 30px;
+    margin: 32px;
+    display: block;
+    float: right;
+    
+}
 
+h3{
+    text-align: center;
+    margin: 10px;
+}
+
+.benefit-images {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+p{
+font-size: 20px;
+}
+
+.content{
+    display: block;
+    background-color: #0981c2;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 50px;
+    margin: 32px 20px;
+    width: 70%;
+    margin-bottom: 20px;
+    font-size: 36px;
+    text-decoration: none;
 }
 
 
@@ -80,29 +109,6 @@ p {
     float: right;
     margin-left: 25px;
     max-height: 200px;
-}
-
-.benefits {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-    color: white;
-    max-width: 250px;
-    height: auto;
-    padding: 20px;
-    padding-bottom: 30px;
-    margin: 32px;
-    display: inline-block;
-}
-
-h3{
-    text-align: center;
-    margin: 10px;
-}
-
-.benefit-images {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
 }
 
 footer {
