--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* add design/layout to the entire page */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,10 +6,12 @@
     line-height: 1.5;
 }
 
+/* change background color of webpage */
 body {
     background-color: #d9dcd6;
 }
 
+/* style header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -21,10 +24,12 @@ h1 {
     font-size: 48px;
 }
 
+/* change color of 'seo' in the header name */
 span{
     color: #d9dcd6;
 }
 
+/* position and style the navigation bar */
 .header-list {
     padding-top: 15px;
     margin-right: 20px;
@@ -44,6 +49,7 @@ li {
     margin-left: 25px;
 }
 
+/* position the banner image of webpage */
 .webpage-banner {
     width: 100%;
     margin-bottom: 5px;
@@ -51,6 +57,7 @@ li {
     margin-right: auto;
 }
 
+/* style and position benefits section */
 .benefits {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -80,6 +87,7 @@ p{
 font-size: 20px;
 }
 
+/* style and position content of webpage */
 .content{
     display: block;
     background-color: #0981c2;
@@ -99,6 +107,7 @@ font-size: 20px;
     font-size: 36px;
 }
 
+/* position images in content section */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -111,6 +120,7 @@ font-size: 20px;
     max-height: 200px;
 }
 
+/* style and position footer */
 footer {
     padding: 30px;
     margin: 30px;
